src/modules/css-vars/css-vars.scss
.centered-image-logo {
  animation: logoPulseGlow 1.8s ease-in-out infinite;
  transform-origin: center;
}

.signup-popup-wrapper .popup__window .static.signup-popup-static-block p img {
  width: 100% !important;
  height: 150px;
}
.signup-popup-wrapper .popup__window .static.signup-popup-static-block {
  block-size: initial;
  inline-size: initial;
}

.profile-wrapper-absolute {
  height: calc(100% - 70px);
}

footer.sticky,
.footer.sticky,
.page-footer.sticky {
  position: relative !important;
  bottom: auto !important;
}


@keyframes logoPulseGlow {
  0% {
    transform: scale(1);
    filter: drop-shadow(0 0 0px rgba(246, 172, 0, 0));
  }
  50% {
    transform: scale(1.08);
    filter: drop-shadow(0 0 12px rgba(246, 172, 0, 0.6));
  }
  100% {
    transform: scale(1);
    filter: drop-shadow(0 0 0px rgba(246, 172, 0, 0));
  }
}

.popup.popup-z-index.casino-game { display: none!important; }

